[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/art/circle_particles.png" type="Texture" id=1]
[ext_resource path="res://hazards/portal_transport.gd" type="Script" id=2]

[sub_resource type="CanvasItemMaterial" id=1]
particles_animation = true
particles_anim_h_frames = 8
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 10, 0 )
initial_velocity = 10.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
color = Color( 0.65098, 0.988235, 0.858824, 1 )
anim_speed = 1.0
anim_speed_random = 0.16

[sub_resource type="Animation" id=3]
resource_name = "start"
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}

[node name="portal_transport" type="Particles2D"]
material = SubResource( 1 )
z_index = 3
amount = 16
fixed_fps = 20
local_coords = false
process_material = SubResource( 2 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="tw" type="Tween" parent="."]

[node name="circle_particles" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 8
frame = 3
__meta__ = {
"_edit_lock_": true
}

[node name="end_timer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "start"
anims/start = SubResource( 3 )
[connection signal="tween_all_completed" from="tw" to="." method="_on_tw_tween_all_completed"]
[connection signal="timeout" from="end_timer" to="." method="_on_end_timer_timeout"]
